# vue-tsc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/source-map/: Cargo.toml
crates/source-map/src/: lib.rs
crates/ts-runner/: Cargo.toml
crates/ts-runner/src/: config.rs  diagnostics.rs  lib.rs  runner.rs  virtual_files.rs
crates/vue-codegen/: Cargo.toml
crates/vue-codegen/src/: context.rs  helpers.rs  lib.rs  script.rs  template.rs
crates/vue-diagnostics/: Cargo.toml
crates/vue-diagnostics/src/: component.rs  lib.rs  template.rs
crates/vue-parser/: Cargo.toml
crates/vue-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/vue-template-compiler/: Cargo.toml
crates/vue-template-compiler/src/: ast.rs  error.rs  lib.rs  parser.rs  transforms.rs
crates/vue-tsc-rs/: Cargo.toml
crates/vue-tsc-rs/src/: cli.rs  config.rs  main.rs  orchestrator.rs  output.rs
docs/: API.md  ARCHITECTURE.md
npm/: README.md  index.d.ts  index.js  install.js  package.json
npm/scripts/: build-npm.js
