[workspace]
resolver = "2"
members = [
    "crates/source-map",
    "crates/vue-parser",
    "crates/vue-template-compiler",
    "crates/vue-codegen",
    "crates/vue-diagnostics",
    "crates/ts-runner",
    "crates/vue-tsc-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/productdevbook/vue-tsc-rs"
homepage = "https://github.com/productdevbook/vue-tsc-rs"
description = "High-performance Vue type-checker written in Rust"

[workspace.dependencies]
# Internal crates
source-map = { path = "crates/source-map" }
vue-parser = { path = "crates/vue-parser" }
vue-template-compiler = { path = "crates/vue-template-compiler" }
vue-codegen = { path = "crates/vue-codegen" }
vue-diagnostics = { path = "crates/vue-diagnostics" }
ts-runner = { path = "crates/ts-runner" }

# Parsing
logos = "0.16"
rowan = "0.16"
text-size = "1.1"
swc_ecma_parser = "32.0"
swc_ecma_ast = "19.0"
swc_common = { version = "18.0", features = ["sourcemap"] }

# HTML/Template parsing
html5ever = "0.29"
markup5ever_rcdom = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.40", features = ["full"] }

# Error handling
thiserror = "2.0"
miette = { version = "7.2", features = ["fancy"] }

# File system
walkdir = "2.5"
globset = "0.4"
notify = "8.2"

# Testing
insta = { version = "1.40", features = ["json", "redactions"] }
pretty_assertions = "1.4"

# Utilities
indexmap = { version = "2.6", features = ["serde"] }
rustc-hash = "2.0"
smol_str = "0.3"
camino = { version = "1.1", features = ["serde1"] }
rayon = "1.10"
which = "8.0"
shellexpand = "3.1"
tempfile = "3.13"
dirs = "6.0"
once_cell = "1.19"
regex = "1.11"
lazy_static = "1.5"

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
