[package]
name = "vue-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Vue-specific diagnostics (template validation, component checks)"

[dependencies]
source-map.workspace = true
vue-parser.workspace = true
vue-template-compiler.workspace = true
smol_str.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
