[package]
name = "vue-template-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Vue template compiler with AST and code generation"

[dependencies]
source-map.workspace = true
vue-parser.workspace = true
smol_str.workspace = true
thiserror.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true

[features]
default = []
serde = ["dep:serde", "source-map/serde", "smol_str/serde", "vue-parser/serde"]
